1999-02-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* DefObject.m ([Object_s -lispIn:]): Handle assignments to 
	types of integers other than int.

	* Archiver.m ([Application -drop]): Don't delete items in shallowMap
	and deepMap.

1999-02-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HDF5Object.m (generatedClassNameCount): New variable.
	(generate_class_name): Use it.
	([HDF5_c -createEnd]): Use generate_class_name, always set c_count.

	* defobj.m (attrIterateFunc): Return 1 whether typeObject is
	found or created.
	(hdf5In): Set typeObject to List if dataset and
	count > 1.

	* HDF5Object.m: Include limits.h.
	(create_compound_type_from_class): Handle const char * -> int.
	Add insertFlag to allow presizing.
	([HDF5CompoundType_c -createEnd]): Create string map for
	each ivar.
	([HDF5CompoundType -drop]): Delete maps in stringMaps and drop
	toplevel Map.
	([HDF5_c -shallowStoreObject:]): Call packBuf:to: to a scratch
	buffer for writing.

	* HDF5Object.[hm] ([HDF5CompoundType_c -packBuf:to:], 
	[HDF5CompoundType_c -writeLevel:], [HDF5CompoundType_c -writeLevels],
	[HDF5_c -writeLevels]): New methods.
	([HDF5_c -setDataset:]): Move to setting phase (called from
	HDF5_c's writeLevels).

	* HDF5Object.h (HDF5CompoundType_c): Rename stringMap to stringMaps,
	since it now made of up Maps, not just arrays.

1999-02-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HDF5Object.m (LEVELSPREFIX): New macro.
	(get_attribute_string_list): New function.
	(get_attribute_levels_string_list, get_attribute): Use it.
	(create_class_from_compound_type): Returns boolean to indicate
	if class is aligned with compound type.  Return class by reference.
	Don't compute alignment based on compound type offsets; accumulate
	offsets using size and component alignment.
	([HDF5CompoundType_c -createEnd]): Add string lists to stringMap
	if any ivar attributes are found.
	([HDF5_c -createEnd]): Set dataset as a part of compoundType 
	creation.